[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vplink-proxy-hunter"
version = "1.0.0"
description = "Smart proxy hunter — random IP brute force with VPLINK verification"
authors = [{name = "zyrogami"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "supabase>=2.0",
]

[project.scripts]
vplink-hunter = "vplink_hunter.cli:main"
